test(api): add FiscalMovementController unit tests
Implemented unit tests for FiscalMovementController endpoints using MockMvc

Covers positive and not-found scenarios for getById, getByTable, and getAll methods

Mocks FiscalMovementService to isolate controller behavior and ensure predictable responses

Improves test coverage and reliability of the API layer

Lays groundwork for future tests of additional endpoints and edge cases